Updated fr/manifest. Translation of part of the files. Maps and a few Destinations are missing.

--- a/fr/DestinySeasonDefinition.json
+++ b/fr/DestinySeasonDefinition.json
@@ -1,7 +1,7 @@
 {
   "2809059426": {
     "displayProperties": {
-      "description": "With the Pyramids and Xivu Arath destabilizing the system, Empress Caiatl, leader of the Cabal and daughter of Calus, seeks an alliance. But when she demands more than Zavala can offer, negotiations collapse, and Guardians must become the tip of the spear that strikes at her growing war council."
+      "description": "Les Pyramides et Xivu Arath déstabilisant le système, l'impératrice Caiatl, chef de la Cabale et fille de Calus, cherche une alliance. Mais quand elle exige plus que ce que Zavala peut offrir, les négociations s'effondrent et les Gardiens doivent devenir la pointe de la lance qui frappe son conseil de guerre grandissant."
     }
   }
 }
