--- a/ja/DestinySeasonDefinition.json
+++ b/ja/DestinySeasonDefinition.json
@@ -1,7 +1,7 @@
 {
   "2809059426": {
     "displayProperties": {
-      "description": "ピラミッドとシヴ・アラスが太陽系を不安定にする中、カバルのリーダーでカルスの娘であるカイアトル女帝がヴァンガードに同盟を求めている。しかし、彼女は人類がカバルの支配下になることを要求したため交渉は決裂し、ガーディアンは彼女とその軍事会議の攻撃標的となった。"
+      "description": "ピラミッドとシヴ・アラスが太陽系を不安定にする中、カバルのリーダーでカルスの娘であるカイアトル女帝がヴァンガードに同盟を求めてきた。しかし、彼女は人類がカバルの支配下になることを要求したため交渉は決裂し、ガーディアンは彼女とその軍事会議の攻撃標的となった。"
     }
   }
 }
