--- a/es-MX/DestinySeasonDefinition.json
+++ b/es-MX/DestinySeasonDefinition.json
@@ -1,4 +1,14 @@
 {
+  "965757574": {
+    "displayProperties": {
+      "name": "Guerra roja"
+    }
+  },
+  "4033618594": {
+    "displayProperties": {
+      "name": "El Estratega"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "Mientras las Pirámides y Xivu Arath desestabilizan el sistema solar, la emperatriz Caiatl, líder de los cabal e hija de Calus, busca formar una alianza. Pero cuando pide más de lo que Zavala puede ofrecer, las negociaciones se derrumban, y los guardianes son elegidos como la punta de lanza en el conflicto contra su creciente consejo de guerra."
