--- a/es/DestinySeasonDefinition.json
+++ b/es/DestinySeasonDefinition.json
@@ -1,4 +1,14 @@
 {
+  "965757574": {
+    "displayProperties": {
+      "name": "Guerra roja"
+    }
+  },
+  "4033618594": {
+    "displayProperties": {
+      "name": "El Estratega"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "Mientras las pirámides y Xivu Arath desestabilizan el sistema, la emperatriz Caiatl, líder de los cabal e hija de Calus, pretende formar una alianza. Sin embargo, las negociaciones se rompen cuando pide más de lo que Zavala puede ofrecerle; los guardianes tendrán que convertirse en la punta de lanza que ataque a su cada vez mayor consejo de guerra."
