--- a/fr/DestinySeasonDefinition.json
+++ b/fr/DestinySeasonDefinition.json
@@ -1,4 +1,14 @@
 {
+  "965757574": {
+    "displayProperties": {
+      "name": "La Guerre rouge"
+    }
+  },
+  "4033618594": {
+    "displayProperties": {
+      "name": "l'Esprit tutélaire"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "Les Pyramides et Xivu Arath déstabilisant le système, l'impératrice Caiatl, chef de la Cabale et fille de Calus, cherche une alliance. Mais quand elle exige plus que ce que Zavala peut offrir, les négociations s'effondrent et les Gardiens doivent devenir la pointe de la lance qui frappe son conseil de guerre grandissant."
