--- a/ja/DestinySeasonDefinition.json
+++ b/ja/DestinySeasonDefinition.json
@@ -1,4 +1,14 @@
 {
+  "965757574": {
+    "displayProperties": {
+      "name": "カバル大戦"
+    }
+  },
+  "4033618594": {
+    "displayProperties": {
+      "name": "ウォーマインド"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "ピラミッドとシヴ・アラスが太陽系を不安定にする中、カバルのリーダーでカルスの娘であるカイアトル女帝がヴァンガードに同盟を求めてきた。しかし、彼女は人類がカバルの支配下になることを要求したため交渉は決裂し、ガーディアンは彼女とその軍事会議の攻撃標的となった。"
