Updated it manifest

--- a/it/DestinySeasonDefinition.json
+++ b/it/DestinySeasonDefinition.json
@@ -1,4 +1,14 @@
 {
+  "965757574": {
+    "displayProperties": {
+      "name": "Guerra Rossa"
+    }
+  },
+  "4033618594": {
+    "displayProperties": {
+      "name": "Mente Bellica"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "Mentre le Piramidi e Xivu Arath destabilizzano il sistema, l'imperatrice Caiatl, leader dei Cabal e figlia di Calus, è in cerca di alleati. Ma quando le sue richieste vengono respinte da Zavala, le trattative hanno fine e i Guardiani si ritrovano a essere la punta della lancia in un conflitto contro il suo consiglio di guerra."
