--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup-java
+      - name: Setup java
         uses: actions/setup-java@v3
         with:
           distribution: oracle
