--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions: write-all
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup java
         uses: actions/setup-java@v3
@@ -23,12 +27,12 @@ jobs:
       - name: Run-main
         run: mvn compile exec:java
         
-      - name: Create Pull Request
-        run:
+      - name: Commit & push files
+        run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           if ! git diff --exit-code; then
-              git add -A
-              git commit -am "Action Files added $(date)"
-              git push -f origin master
+            git add -A
+            git commit -am "Clean files action"
+            git push -f origin main
           fi
