--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <properties>
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-enforcer-plugin.version>3.2.1</maven-enforcer-plugin.version>
     <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
@@ -14,7 +15,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatypes-collections</artifactId>
-      <version>2.14.2</version>
+      <version>[2.14.2,)</version>
       <type>pom</type>
     </dependency>
   </dependencies>
@@ -32,7 +33,7 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.6.3</version>
+                  <version>[3.8.7,)</version>
                 </requireMavenVersion>
               </rules>
               <fail>true</fail>
