--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: Setup java
         uses: actions/setup-java@v3
@@ -24,8 +22,8 @@ jobs:
           distribution: oracle
           java-version: 17
 
-      - name: Run-main
-        run: mvn compile exec:java
+      - name: Run main
+        run: java -jar Main.jar
         
       - name: Commit & push files
         run: |
@@ -34,5 +32,5 @@ jobs:
           if ! git diff --exit-code; then
             git add -A
             git commit -am "Clean files action"
-            git push -f origin main
+            git push -f origin master
           fi
