--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,16 @@
-name: Clean files
+name: Main
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  clean-files:
-    name: Clean files
+  make-template:
+    name: Make template
 
     runs-on: ubuntu-latest
+
+    permissions: write-all
 
     steps:
       - name: Checkout
@@ -20,15 +22,51 @@ jobs:
           distribution: oracle
           java-version: 17
 
-      - name: Run-main
-        run: mvn compile exec:java
-        
-      - name: Create Pull Request
-        run:
+      - name: Compile and run java
+        run: |
+          chmod +x "./.github/compile_run.sh"
+          "./.github/compile_run.sh" template
+
+      - name: Commit & push
+        run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           if ! git diff --exit-code; then
-              git add -A
-              git commit -am "Action Files added $(date)"
-              git push -f origin master
+            git add -A
+            git commit -am "Clean files action"
+            git push -f origin master
+          fi
+
+  clean-files:
+    needs: make-template
+    
+    name: Clean files
+
+    runs-on: ubuntu-latest
+
+    permissions: write-all
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: oracle
+          java-version: 17
+
+      - name: Compile and run java
+        run: |
+          chmod +x "./.github/compile_run.sh"
+          "./.github/compile_run.sh" clean
+
+      - name: Commit & push
+        run: |
+          git config --local user.name actions-user
+          git config --local user.email "actions@github.com"
+          if ! git diff --exit-code; then
+            git add -A
+            git commit -am "Clean files action"
+            git push -f origin master
           fi
