--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           git config --local user.email "actions@github.com"
           if ! git diff --exit-code; then
             git add -A
-            git commit -am "Clean files action"
+            git commit -m "Make template action"
             git push -f origin master
           fi
 
@@ -67,6 +67,6 @@ jobs:
           git config --local user.email "actions@github.com"
           if ! git diff --exit-code; then
             git add -A
-            git commit -am "Clean files action"
+            git commit -m "Clean files action"
             git push -f origin master
           fi
