Updated it manifest
Also run workflow only on upstream

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
   main:
     name: Main
 
+    if: github.repository_owner == 'justrealmilk'
+
     runs-on: ubuntu-latest
 
     permissions: write-all
