--- a/en/DestinySeasonDefinition.json
+++ b/en/DestinySeasonDefinition.json
@@ -9,9 +9,44 @@
       "name": "Warmind"
     }
   },
+  "17436828180": {
+    "displayProperties": {
+      "name": "Shadowkeep"
+    }
+  },
   "2809059426": {
     "displayProperties": {
       "description": "With the Pyramids and Xivu Arath destabilizing the system, Empress Caiatl, leader of the Cabal and daughter of Calus, seeks an alliance. But when she demands more than Zavala can offer, negotiations collapse, and Guardians must become the tip of the spear that strikes at her growing war council."
+    }
+  },
+  "28090594270": {
+    "displayProperties": {
+      "name": "Beyond Light"
+    }
+  },
+  "28090594280": {
+    "displayProperties": {
+      "name": "30th Anniversary"
+    }
+  },
+  "28090594310": {
+    "displayProperties": {
+      "name": "The Witch Queen"
+    }
+  },
+  "27587265680": {
+    "displayProperties": {
+      "name": "Lightfall"
+    }
+  },
+  "27587265720": {
+    "displayProperties": {
+      "name": "The Final Shape"
+    }
+  },
+  "27587265750": {
+    "displayProperties": {
+      "name": "Year of Propehecy"
     }
   }
 }
