--- a/en/DestinySeasonDefinition.json
+++ b/en/DestinySeasonDefinition.json
@@ -9,6 +9,11 @@
       "name": "Warmind"
     }
   },
+  "20267733200": {
+    "displayProperties": {
+      "name": "Forsaken"
+    }
+  },
   "17436828180": {
     "displayProperties": {
       "name": "Shadowkeep"
