--- a/ja/DestinySeasonDefinition.json
+++ b/ja/DestinySeasonDefinition.json
@@ -1,17 +1,78 @@
 {
   "965757574": {
     "displayProperties": {
-      "name": "カバル大戦"
+      "name": "カバル大戦",
+      "description": "「レッド・ウォー」は『Destiny 2』最初のキャンペーンです。ガーディアンたちは、ドミヌス・ガウル率いるカバルのレッドリージョンと対峙し、最後のシティとトラベラーの光を奪われました。"
+    }
+  },
+  "2973407602": {
+    "displayProperties": {
+      "description": "長き眠りについていた惑星、水星が再び目を覚ました。太陽に炙られた地表では、増殖し続けるベックスが巡回し、カバル・レッドリージョンの残党が必死の攻防を繰り広げている。水星の地下には、巨大な機構——無限の森が広がり、オシリスの謎と、人類の救済の鍵が隠されている。"
     }
   },
   "4033618594": {
     "displayProperties": {
-      "name": "ウォーマインド"
+      "name": "ウォーマインド",
+      "description": "黄金時代の造られた衛星が、火星のヘラス盆地に次々と墜落する。氷に覆われた氷河が溶け出し、ウォーマインド・ラスプーチンの中枢、そしてその破壊を目論む太古のハイヴの軍勢が姿を現した。"
+    }
+  },
+  "20267733200": {
+    "displayProperties": {
+      "name": "孤独と影",
+      "description": "ケイド6の死を受けて、ガーディアンたちは彼の仇を討つため、入り組んだ岸辺と夢見る都市へと足を踏み入れる。彼を殺した張本人であるユルドレン・ソヴとスコーンたちを追い詰めるために。"
+    }
+  },
+  "17436828180": {
+    "displayProperties": {
+      "name": "影の砦",
+      "description": "シティの安全を守るガーディアンたちが、銀河の果てに広がる辺境へと目を向ける中、月の地下で長き眠りについていた太古の邪悪から、新たなナイトメアが姿を現した。"
     }
   },
   "2809059426": {
     "displayProperties": {
       "description": "ピラミッドとシヴ・アラスが太陽系を不安定にする中、カバルのリーダーでカルスの娘であるカイアトル女帝がヴァンガードに同盟を求めてきた。しかし、彼女は人類がカバルの支配下になることを要求したため交渉は決裂し、ガーディアンは彼女とその軍事会議の攻撃標的となった。"
+    }
+  },
+  "28090594270": {
+    "displayProperties": {
+      "name": "光の超越",
+      "description": "暗黒のフォールン、エラムス・ケルが従者と共に惑星エウロパを占拠した。ガーディアンはこれに応戦することになった。木星の氷に閉ざされた衛星エウロパへ赴き、エラムスを追い詰め、そして――自らも〈暗黒〉を手にする覚悟を決める。"
+    }
+  },
+  "28090594280": {
+    "displayProperties": {
+      "name": "30周年",
+      "description": "『Destiny』30周年を記念する特別なイベントが開催されます。新たなアクティビティ、武器、そして本作の歩んできた歴史と、その誕生に影響を与えた作品群へのオマージュが詰まった伝承が登場します。"
+    }
+  },
+  "28090594310": {
+    "displayProperties": {
+      "name": "漆黒の女王",
+      "description": "〈姿を変える者の姉〉、〈ソードブレイカー〉、そして〈ウィッチ・クイーン〉――いくつもの名を持つこの身に、いま物語を紡ぐ者は、どの名を与えるのだろう。私の庭の中を歩き回り、私の光を崇める者たちに抗ってまでもこの力の気高さを否定しようとするのか。"
+    }
+  },
+  "27587265680": {
+    "displayProperties": {
+      "name": "光の終焉",
+      "description": "すべてを見届ける目撃者、そしてその新たな弟子がついにこの地へ姿を現した。今、旅が始まる――人と人とを結ぶ見えざる糸、その隠された因果を知り、それをほどき、そして己の意志で織り直す術を学ぶための旅が。この新たな力を携え、仲間であるガーディアンたちとともに、滅びの運命を越えてゆけ。そこにこそ、真の強さが宿る。"
+    }
+  },
+  "27587265720": {
+    "displayProperties": {
+      "name": "最終形態",
+      "description": "最終形態が迫り来る――それは〈目撃者〉の歪んだ意志が現実を侵食し、悪夢のごとく結晶化した終焉の姿。危険に満ちた旅が始まる。向かう先は、トラベラーの中心。バンガードを結集し、光と暗黒の戦争に終止符を打て。"
+    }
+  },
+  "27587265750": {
+    "displayProperties": {
+      "name": "運命の境界",
+      "description": "何かが呼んでいる――太陽系の果て、孤独に浮かぶ小惑星へと誘う謎のメッセージが、バンガードのもとに届いた。その招待の発信源を追い、辿り着いた先で、私たちの未来を塗り替える真実が明かされる。"
+    }
+  },
+  "2758726575": {
+    "displayProperties": {
+      "name": "Season of Reclamation",
+      "description": "As the Vanguard unravels a mystery at the edge of the system, Earth's defenders struggle to hold Inner Sol. Bolster the Forces of the City as they defend the home front from ancient foes."
     }
   }
 }
