--- a/en/DestinySeasonDefinition.json
+++ b/en/DestinySeasonDefinition.json
@@ -73,5 +73,10 @@
     "displayProperties": {
       "name": "Season of Reclamation"
     }
+  },
+  "27587265600": {
+    "displayProperties": {
+      "name": "Renegades"
+    }
   }
 }
