--- a/ja/DestinySeasonDefinition.json
+++ b/ja/DestinySeasonDefinition.json
@@ -71,8 +71,12 @@
   },
   "2758726575": {
     "displayProperties": {
-      "name": "Season of Reclamation",
-      "description": "As the Vanguard unravels a mystery at the edge of the system, Earth's defenders struggle to hold Inner Sol. Bolster the Forces of the City as they defend the home front from ancient foes."
+      "name": "奪還のシーズン"
+    }
+  },
+  "27587265600": {
+    "displayProperties": {
+      "name": "Renegades"
     }
   }
 }
