--- a/en/DestinySeasonDefinition.json
+++ b/en/DestinySeasonDefinition.json
@@ -78,5 +78,10 @@
     "displayProperties": {
       "name": "Renegades"
     }
+  },
+  "2758726560": {
+    "displayProperties": {
+      "name": "Season of the Lawless"
+    }
   }
 }
